<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">EasyPlex</string>
    <string name="facebook_app_id" translatable="false">590451789066119</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb590451789066119</string>
    <string name="movie_original_label" translatable="false">Movie</string>
    <string name="movie_release_label" translatable="false">Release Date</string>
    <string name="movie_genres_text" translatable="false">Thriller, Action, Sci Fi </string>
    <string name="movie_overview_label" translatable="false">Synopsis</string>
    <string name="movie_overview_text" translatable="false">A ten year old girl who wanders away from her parents along a path that leads to a
        world ruled by strange and unusual monster-like animals. Her parents have been changed into pigs along with others
        inside a bathhouse full of these creatures. Will she ever see the world how it once was?</string>
    <string name="movie_cast_label">Casts</string>
    <string name="home">Home</string>
    <string name="resume">Resume</string>
    <string name="settings">Settings</string>
    <string name="discover">Discover</string>
    <string name="library">Library</string>
    <string name="upcoming">Upcoming</string>
    <string name="streaming">Streaming</string>
    <string name="live_text">LIVE</string>
    <string name="share_msg">Hi,I would like to share with you this media called </string>
    <string name="about_wifi_warning">You have selected to playback on Wi-Fi only. Go to App Settings to change.</string>
    <string name="about_no_stream_download">No Download Available For This Movie Check Later.</string>
    <string name="about_no_stream_download_episode">No Download Available For This Episode Check Later.</string>
    <string name="about_no_stream">No Stream Available For This Movie Check Later.</string>
    <string name="ep_n" translatable="false">EP N</string>
    <string name="about_error_login">Bad Credentials. Please Login Again.</string>
    <string name="err_email">The email must be a valid email address.</string>
    <string name="err_name">The name field is required.</string>
    <string name="err_password">The password must be at least 6 characters.</string>
    <string name="controller_time_position_text_default" translatable="false">00:00:00</string>
    <string name="no_media_error_message" translatable="false">A MediaModel needs to be passed to the intent on activity start to play media</string>
    <string name="commercial" translatable="false">Commercial</string>
    <string name="movies_amp_series" translatable="false"><![CDATA[MOVIES & Series]]></string>
    <string name="title">TITLE</string>
    <string name="genre">Genre</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="seasons_8" translatable="false">Seasons:8</string>
    <string name="synopsis">Synopsis</string>
    <string name="details">Details</string>
    <string name="starring">Starring</string>
    <string name="seasons">Seasons</string>
    <string name="search_movies_series">Search Movies, Series,Animes,Streaming…</string>
    <string name="no_relateds_movies_found">No Relateds Movies Found</string>
    <string name="no_list_result">Your favorites list is empty</string>
    <string name="list_add_later">Add some items to find them later</string>
    <string name="premuim">Premuim</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="register">R E G I S T E R</string>
    <string name="update_profile">U P D A T E</string>
    <string name="copyright">Copyright © 2024 EasyPlex. All rights reserved.</string>
    <string name="image">Image</string>
    <string name="start_watching">START WATCHING</string>
    <string name="register_sucess">The Registration was successful</string>
    <string name="recommended_for_you">RECOMMENDED FOR YOU</string>
    <string name="streaming_home">STREAMING</string>
    <string name="trending_now">TRENDING NOW</string>
    <string name="new_releases">NEW RELEASES</string>
    <string name="popular_series">POPULAR SERIES</string>
    <string name="latest_series">LATEST SERIES</string>
    <string name="new_this_week">NEW THIS WEEK</string>
    <string name="latest_animes">LATEST ANIMES</string>
    <string name="most_popular">Most Popular</string>
    <string name="auth_name" translatable="false">Auth Name</string>
    <string name="user_EasyPlex_com" translatable="false">user@@string/app_name.com</string>
    <string name="free">Free</string>
    <string name="allow_notifications">Allow Notifications</string>
    <string name="wi_fi_only">Wi-Fi Only</string>
    <string name="auto_play">Auto Play</string>
    <string name="substitle_size">Substitle Size</string>
    <string name="current_aspect_ratio">Current aspect ratio : %s</string>
    <string name="current_size">Current Size</string>
    <string name="current_background">Current Color</string>
    <string name="clear_my_list">Clear My List</string>
    <string name="clear_history">Do you Really want to Clear History ?</string>
    <string name="clear_cache_msg">This will be clear cached data for this app !</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="about_us">About Us</string>
    <string name="confirm">Confirm</string>
    <string name="trailer_loading">Trailer Loading</string>
    <string name="genres_list_is_empty">Genres List is empty</string>
    <string name="episodes">Episodes</string>
    <string name="next_episode">Next Episode</string>
    <string name="check_later">Check Later</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="decilne">DECILNE</string>
    <string name="accept">ACCEPT</string>
    <string name="relateds">Relateds</string>
    <string name="substitles">Substitles</string>
    <string name="login">L O G I N</string>
    <string name="skip">S K I P</string>
    <string name="signup">SIGN UP FOR AN ACCOUNT?</string>
    <string name="forget">Forget Password ?</string>
    <string name="no_upcoming_movies_added">No Upcoming Movies Added</string>
    <string name="no_download_movies_added">No Downloads Added</string>
    <string name="this_content_if_only_for_vip">This Content if only for VIP</string>
    <string name="sorry">SORRY !</string>
    <string name="back">BACK</string>
    <string name="ad">Ad</string>
    <string name="please_try_another_genre">Please try another genre.</string>
    <string name="try_searching_for_another_movie_show">Try Searching for another movie,show</string>
    <string name="oh_darn_we_don_t_have_that">Oh darn. We don\'t have that</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="support">SUPPORT</string>
    <string name="thank_you">Thank You!</string>
    <string name="the_transaction_was_successful">The transaction was successful</string>
    <string name="status">status</string>
    <string name="id" translatable="false">ID</string>
    <string name="AGREE">AGREE</string>
    <string name="DISAGREE">DISAGREE</string>
    <string name="movie_rating" translatable="false">8.5</string>
    <string name="try_easyplex_vip">Subscribe From Today</string>
    <string name="watch_video_ads_to_unlock">Unlock the stream</string>
    <string name="subscribe_now">SUBSCRIBE NOW</string>
    <string name="disable_player_ads">Disable Player Ads</string>
    <string name="turn_off_ads_banner_interstitial_ads">Turn Off ads (Banner,Interstitial ads)</string>
    <string name="play_premium_content_without_restrictions">Play Premium content without restrictions</string>
    <string name="download_premium_content">Download Premium content</string>
    <string name="vip_features">With VIP. Watch thousands of shows and movies, with plans starting at $2.99/month.</string>
    <string name="custom_text_here">Custom Text Here</string>
    <string name="update_message">update message</string>
    <string name="version_2_0">Version 2.0</string>
    <string name="update">Update</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="payment_failed_please_try_again">Payment failed – please try again</string>
    <string name="valid_until" translatable="false">Valid until : 09–20-2020</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="track_selection_title">Select tracks</string>
    <string name="cant_show">Can\'t show rewarded video</string>
    <string name="continue_watching">Continue Watching</string>
    <string name="continue_watching_profile">Continue Watching for</string>
    <string name="clear_watch_history">Clear Watch History</string>
    <string name="media_route_menu_title">Cast</string>
    <string name="play_media_as_embed">Play Media As Embed</string>
    <string name="audio">Audio</string>
    <string name="media_otpions">Media Options</string>
    <string name="sort_by">Sort by</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="suggestions">Suggestions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="latest_channels">Latest Channels</string>
    <string name="downloads">Downloads</string>
    <string name="if_you_re_having_audio_problems_enable_this_option">If you’re having audio problems, enable this option to support more audio extensions.</string>
    <string name="are_you_sure_to_delete_from_your_watching_history">Are you sure to delete </string>
    <string name="report_broken_link">Report Broken Link</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="animes">Animes</string>
    <string name="version">EASYPLEX: %1$s</string>
    <string name="introducing_cast">Introducting @string/app_name Cast</string>
    <string name="sorry_this_content_is_only_available_for_easyplex_vip_users">Sorry,this content is only available Premuim  users</string>
    <string name="app_id" translatable="false">CC1AD845</string>
    <string name="action_settings">Settings</string>
    <string name="error">Error</string>
    <string name="about_app">About @string/app_name</string>
    <string name="oops">Oops</string>
    <string name="prefs_header_application">Application Behavior</string>
    <string name="prefs_header_application_summary">Control how the application behaves on the TV
    </string>
    <string name="prefs_volume_title">Volume Assignment</string>
    <string name="prefs_volume_title_summary">Controls %1$s</string>
    <string name="prefs_volume_dialog_title">Volume Assignment</string>
    <string name="prefs_volume_default">device</string>
    <string name="show_queue">Show Queue</string>
    <string name="queue_list">Queue</string>
    <string name="queue_tag_item">queue-tag-item</string>
    <string name="restart">Restart</string>
    <string name="resend_token">Resend Token</string>
    <string name="your_email_is_not_verified">Your Email is not verified !</string>
    <string name="msg_to_confirm">Check your inbox or spam folders , you can click restart when you complete the confirmation !</string>
    <string name="completed_download_message_fragment">This is where you\'ll see the shows and movies we download for your. Check back later to see what we\'ve found</string>
    <string name="queue_download_message_fragment">This is where you\'ll see the shows and movies in queue mode. try to add some download and Check back later to see what we\'ve found</string>
    <string name="queue_is_empty">Queue is empty !</string>
    <string name="completed_is_empty">Completed is empty</string>
</resources>