<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:background="@color/fragment_content_detail_overlay_end"
        android:layout_height="match_parent">

        <com.easyplexdemoapp.ui.downloadmanager.ui.customview.EmptyRecyclerView
            android:id="@+id/download_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/widget_margin"
            android:paddingRight="@dimen/widget_margin"
            android:paddingLeft="@dimen/widget_margin"
            android:paddingBottom="@{@dimen/fab_size + @dimen/fab_margin}"
            android:clipToPadding="false"
            android:scrollbars="vertical"
            android:focusable="true"
            android:scrollbarStyle="outsideOverlay" /> <!-- Need for padding -->


        <LinearLayout
            android:id="@+id/empty_view_download_list"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_my_download_empty_state"
                android:contentDescription="@string/image" />


            <TextView
                android:id="@+id/fragment_title_download_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/completed_is_empty"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_title_download_queue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/queue_is_empty"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/grey_40"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message_completed_downloads_empty"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/completed_download_message_fragment"
                android:textColor="@color/grey_40" />

            <TextView
                android:id="@+id/message_queue_downloads_empty"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:gravity="center"
                android:text="@string/queue_download_message_fragment"
                android:textColor="@color/grey_40" />

        </LinearLayout>
    </FrameLayout>
</layout>