<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layoutDirection="ltr"
    android:background="@drawable/fragment_shadows_top"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.90"
        tools:ignore="UselessParent">



        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="end"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/ic_close"
                android:visibility="gone"
                android:contentDescription="@string/image"
                app:tint="@color/grey_20" />
        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_below="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:background="@drawable/bg_loading_subtitles_accent"
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp">
            </RelativeLayout>
        </LinearLayout>



        <LinearLayout
            android:padding="10dp"
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_below="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/mailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_email_is_not_verified"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_3"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:fontFamily="sans-serif-black" />



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msg_to_confirm"
                android:textAllCaps="true"
                android:layout_gravity="center_horizontal"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/grey_3"
                android:textSize="12sp"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                app:fontFamily="sans-serif-black" />


            <Button
                android:id="@+id/btnRestart"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="-4dp"
                android:layout_marginEnd="-4dp"
                android:background="@drawable/btn_gradient_watch_video"
                android:text="@string/restart"
                android:visibility="gone"
                android:layout_marginTop="10dp"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/resendTokenButton"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="@dimen/pixel_20dp"
                android:paddingStart="15dp"
                android:background="@drawable/btn_gradient_white_login"
                android:paddingEnd="15dp"
                android:focusable="true"
                android:gravity="start|center">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="@string/resend_token"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:textColor="@color/black"
                    android:layout_gravity="start|center" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>