<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/app_background"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_close"
                android:contentDescription="@string/image"
                app:tint="@color/grey_20" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-40dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/app_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_info"
                    android:contentDescription="@string/image"
                    app:tint="@color/grey_11" />


                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/version_2_0"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/grey_40" />

            </LinearLayout>

            <TextView
                android:id="@+id/app_update_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacing_large"
                android:autoLink="web"
                android:text="@string/update_message"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/white" />

        </LinearLayout>

        <com.balysv.materialripple.MaterialRippleLayout
            android:id="@+id/bt_getcode"
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing_xxlarge"
            android:background="@drawable/bg_gradient">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/update"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/black"
                app:fontFamily="sans-serif-medium" />

        </com.balysv.materialripple.MaterialRippleLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>