<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:scrollingCache="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@color/fragment_content_detail_overlay_end"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_large"
            android:paddingEnd="@dimen/spacing_large">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/privacy_amp_policy"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:fontFamily="sans-serif-black" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/spacing_large">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_20"
             />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_decline"
            style="@style/Button.Primary.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/decilne"
            android:textColor="@color/grey_11" />

        <Button
            android:id="@+id/bt_accept"
            style="@style/Button.Primary.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/accept"
            android:textColor="@color/main_color" />

    </LinearLayout>

</LinearLayout>


</androidx.core.widget.NestedScrollView>
