<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_alignParentBottom="true"
        android:background="@color/fragment_content_detail_overlay_end"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/fragment_content_detail_overlay_end">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:paddingStart="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_large">


                <TextView
                    android:id="@+id/movietitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/title"
                    android:layout_gravity="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/grey_11"
                    android:textSize="20sp"
                   />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/bt_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="left"
                android:layout_marginTop="12dp"
                android:layout_marginStart="15dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/grey_20" />
        </LinearLayout>

        <LinearLayout
            android:visibility="visible"
            android:orientation="vertical"
            android:layout_below="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/btn_clearAll"
                android:orientation="horizontal"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="15dp"
                android:paddingStart="15dp"
                android:visibility="gone"
                android:background="@drawable/btn_gradient_white_login"
                android:paddingEnd="15dp"
                android:focusable="true"
                android:layout_gravity="center"
                android:gravity="center">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:gravity="center"
                    android:text="Clear All"
                    android:textStyle="bold"
                    android:visibility="visible"
                    android:textColor="@color/black"
                    android:layout_gravity="start|center" />
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_movies_genres"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:scrollingCache="true" />


            <LinearLayout
                android:id="@+id/noResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_list_result"
                    android:textColor="@color/grey_40"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:gravity="center"
                    android:text="@string/list_add_later"
                    android:textColor="@color/grey_40"
                    />

            </LinearLayout>



        </LinearLayout>



    </RelativeLayout>

</RelativeLayout>